--- a/index.html
+++ b/index.html
@@ -1,7 +1,122 @@
-<!-- Firebase SDKs -->
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Quotes Wall</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet" />
 
-<!-- 你写的逻辑 -->
-<script src="script.js" defer></script>
+  <style>
+    :root {
+      --primary-color: #8B0000;
+      --bg-color: #fefefe;
+      --text-color: #222;
+      --placeholder-color: rgba(139, 0, 0, 0.3);
+      --card-bg: #fff;
+      --shadow: 0 4px 24px rgba(0, 0, 0, 0.08);
+    }
+    body.dark {
+      --bg-color: #1d1d1d;
+      --text-color: #f5f5f5;
+      --placeholder-color: rgba(139, 0, 0, 0.3);
+      --card-bg: #292929;
+      --primary-color: #B22222;
+      --shadow: 0 4px 24px rgba(255, 255, 255, 0.1);
+    }
+    body {
+      font-family: 'EB Garamond', serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: all 0.4s ease;
+    }
+    ::placeholder {
+      color: var(--placeholder-color);
+    }
+    .navbar {
+      background-color: var(--primary-color) !important;
+    }
+    .card {
+      background-color: var(--card-bg);
+      border-radius: 1rem;
+      box-shadow: var(--shadow);
+      border: none;
+      transition: transform 0.3s ease;
+    }
+    .card:hover {
+      transform: translateY(-5px);
+    }
+    .btn {
+      background-color: var(--primary-color);
+      color: white;
+      border: none;
+      transition: all 0.3s ease-in-out;
+    }
+    .btn:hover {
+      transform: scale(1.02);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      opacity: 0.95;
+    }
+    .btn-outline-light {
+      color: white;
+      border-color: white;
+    }
+    .theme-toggle {
+      background: none;
+      border: none;
+      font-size: 1.4rem;
+      color: white;
+      cursor: pointer;
+    }
+    #background-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      z-index: -1;
+      overflow: hidden;
+      pointer-events: none;
+      font-family: 'Courier New', monospace;
+      font-size: 30px;
+      color: rgba(0, 0, 0, 0.15);
+    }
+    #scrolling-text {
+      animation: scroll-right 300s linear infinite;
+      filter: brightness(1.3) contrast(1.5);
+    }
+    #scrolling-text .quote-line {
+      display: block;
+      white-space: nowrap;
+      font-size: 30px;
+      margin: 0.5em 0;
+    }
+    @keyframes scroll-right {
+      0% { transform: translateX(-100%); }
+      100% { transform: translateX(100%); }
+    }
+  </style>
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+  <script src="script.js" defer></script>
+</head>
+<body>
+  <div id="background-overlay">
+    <div id="scrolling-text">
+      <!-- 动态 quote 内容插入位置 -->
+    </div>
+  </div>
+  <nav class="navbar navbar-dark">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <a class="navbar-brand" href="#">Study Anyways</a>
+      <div class="d-flex gap-2">
+        <button id="auth-btn" class="btn btn-outline-light btn-sm"></button>
+        <button id="toggle-theme" class="theme-toggle" title="Toggle Theme">🌓</button>
+      </div>
+    </div>
+  </nav>
+</body>
+</html>
