--- a/index.html
+++ b/index.html
@@ -70,22 +70,26 @@
       cursor: pointer;
     }
     #background-overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      z-index: -1;
-      overflow: hidden;
-      pointer-events: none;
-      font-family: 'Courier New', monospace;
-      font-size: 30px;
-      color: rgba(0, 0, 0, 0.15);
-    }
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  overflow: hidden;
+  pointer-events: none;
+  font-family: 'Courier New', monospace;
+  font-size: 24px;
+  color: rgba(0, 0, 0, 0.07);
+  background: transparent;
+}
     #scrolling-text {
-      animation: scroll-right 300s linear infinite;
-      filter: brightness(1.3) contrast(1.5);
-    }
+  animation: scroll-right 300s linear infinite;
+  filter: brightness(1.2) contrast(1.3);
+  max-height: 100vh;
+  overflow: hidden;
+  padding-top: 2em;
+}
     #scrolling-text .quote-line {
       display: block;
       white-space: nowrap;
