--- a/index.html
+++ b/index.html
@@ -5,101 +5,42 @@
   <title>Quotes Wall</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet" />
-
   <style>
     :root {
       --primary-color: #8B0000;
-      --bg-color: #fefefe;
-      --text-color: #222;
-      --placeholder-color: rgba(139, 0, 0, 0.3);
-      --card-bg: #fff;
-      --shadow: 0 4px 24px rgba(0, 0, 0, 0.08);
+      --text-light: #222;
+      --text-dark: #f5f5f5;
+    }
+    /* ===== Kraft‑paper background ===== */
+    body {
+      font-family: 'Times New Roman', Times, serif;
+      background: #f3e2c7 url('https://www.transparenttextures.com/patterns/cardboard.png') repeat fixed;
+      color: var(--text-light);
+      transition: background 0.4s ease, color 0.4s ease;
     }
     body.dark {
-      --bg-color: #1d1d1d;
-      --text-color: #f5f5f5;
-      --placeholder-color: rgba(139, 0, 0, 0.3);
-      --card-bg: #292929;
-      --primary-color: #B22222;
-      --shadow: 0 4px 24px rgba(255, 255, 255, 0.1);
+      background: #73624a url('https://www.transparenttextures.com/patterns/cardboard.png') repeat fixed;
+      color: var(--text-dark);
     }
-    body {
-      font-family: 'EB Garamond', serif;
-      background-color: var(--bg-color);
-      color: var(--text-color);
-      transition: all 0.4s ease;
-    }
-    ::placeholder {
-      color: var(--placeholder-color);
-    }
-    .navbar {
-      background-color: rgba(139, 0, 0, 0.7) !important;
-      transition: background-color 0.3s;
-    }
-    .card {
-      background-color: var(--card-bg);
-      border-radius: 1rem;
-      box-shadow: var(--shadow);
-      border: none;
-      transition: transform 0.3s ease;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-    }
-    .btn {
-      background-color: var(--primary-color);
-      color: white;
-      border: none;
-      transition: all 0.3s ease-in-out;
-    }
-    .btn:hover {
-      transform: scale(1.02);
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      opacity: 0.95;
-    }
-    .btn-outline-light {
-      color: white;
-      border-color: white;
-    }
-    .theme-toggle {
-      background: none;
-      border: none;
-      font-size: 1.4rem;
-      color: white;
-      cursor: pointer;
-    }
-    #background-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  overflow: hidden;
-  pointer-events: none;
-  font-family: 'Courier New', monospace;
-  font-size: 24px;
-  color: rgba(0, 0, 0, 0.07);
-  background: transparent;
-}
+
+    /* ===== Header ===== */
+    .navbar { background: rgba(139, 0, 0, 0.85) !important; transition: transform .5s ease; }
+    .navbar.hidden { transform: translateY(-100%); }
+
+    /* ===== Scrolling quotes ===== */
+    #background-overlay { position: fixed; inset: 0; z-index: -1; overflow: hidden; pointer-events: none; font-size: 26px; }
     #scrolling-text {
-  animation: scroll-right 300s linear infinite;
-  filter: brightness(1.2) contrast(1.3);
-  max-height: 100vh;
-  overflow: hidden;
-  padding-top: 2em;
-}
-    #scrolling-text .quote-line {
-      display: block;
-      white-space: nowrap;
-      font-size: 30px;
-      margin: 0.5em 0;
+      animation: scroll-left 300s linear infinite;
+      filter: brightness(1.1) contrast(1.2);
+      padding: 3em 0;
+      display: flex;
+      flex-direction: column;
+      gap: 0.25em; /* spacing */
     }
-    @keyframes scroll-right {
-      0% { transform: translateX(-100%); }
-      100% { transform: translateX(100%); }
-    }
+    #scrolling-text .quote-line { white-space: nowrap; font-size: 30px; margin: 0; }
+    /* Only the FIRST quote (top visible) is centered */
+    #scrolling-text .quote-line:first-child { width: 100%; text-align: center; }
+    @keyframes scroll-left { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
   </style>
 
   <!-- Firebase SDKs -->
@@ -111,35 +52,44 @@
 <body>
   <div id="background-overlay">
     <div id="scrolling-text">
+      <!-- 14 quote lines (unchanged) -->
       <div class="quote-line">The unexamined life is not worth living — Socrates · To improve is to change — Churchill · Knowledge is power — Bacon · Live as if you were to die tomorrow. Learn as if you were to live forever — Gandhi · That’s one small step for man, one giant leap for mankind — Armstrong</div>
       <div class="quote-line">History is written by the victors — Churchill · If you want to go fast, go alone; if you want to go far, go together — African proverb · The journey of a thousand miles begins with one step — Lao Tzu · Time and tide wait for no man — Chaucer · Fortune favors the bold — Virgil</div>
       <div class="quote-line">Those who do not learn history are doomed to repeat it — Santayana · In the middle of difficulty lies opportunity — Einstein · He who has a why to live can bear almost any how — Nietzsche · Do not go where the path may lead, go instead where there is no path and leave a trail — Thoreau · What you do not want done to yourself, do not do to others — Confucius</div>
       <div class="quote-line">To be yourself in a world that is constantly trying to make you something else is the greatest accomplishment — Emerson · Be the change that you wish to see in the world — Gandhi · Imperfection is beauty, madness is genius and it's better to be absolutely ridiculous than absolutely boring — Monroe · Be yourself; everyone else is already taken — Wilde · Don’t compromise yourself: you’re all you have — Grisham</div>
       <div class="quote-line">The arc of the moral universe is long, but it bends toward justice — MLK · Injustice anywhere is a threat to justice everywhere — MLK · The only way to do great work is to love what you do — Jobs · The best revenge is massive success — Sinatra · Success usually comes to those who are too busy to be looking for it — Thoreau</div>
+      <div class="quote-line">I have a dream — MLK · Ask not what your country can do for you, ask what you can do for your country — Kennedy · Government of the people, by the people, for the people, shall not perish — Lincoln · Give me liberty, or give me death — Henry · All men are created equal — Declaration</div>
       <div class="quote-line">The only thing we have to fear is fear itself — Roosevelt · Nothing is so painful to the human mind as a great and sudden change — Shelley · Courage is grace under pressure — Hemingway · Fear defeats more people than any other one thing in the world — Emerson · Do the thing you fear and the death of fear is certain — Emerson</div>
-      <div class="quote-line">I have a dream — Martin Luther King Jr. · Ask not what your country can do for you, ask what you can do for your country — Kennedy · Government of the people, by the people, for the people, shall not perish — Lincoln · Give me liberty, or give me death — Henry · All men are created equal — Declaration</div>
-      <div class="quote-line">E = mc² · F = ma · a² + b² = c² · ΔG = ΔH - TΔS · PV = nRT · ∑F = 0</div>
-      <div class="quote-line">sin²θ + cos²θ = 1 · ∇ · E = ρ/ε₀ · λ = h/p · KE = ½mv² · Δx·Δp ≥ ℏ/2 · sin(ωt)</div>
-      <div class="quote-line">Life is what happens when you're busy making other plans — Lennon · The greatest glory in living lies not in never falling, but in rising every time we fall — Mandela · You must be the change you wish to see in the world — Gandhi · In three words I can sum up everything I've learned about life: it goes on — Frost · Keep calm and carry on — British Govt</div>
+      <div class="quote-line">E = mc² · F = ma · a² + b² = c² · ΔG = ΔH - TΔS · PV = nRT · ∑F = 0 · V = IR · pV = NkT · E = hf · v = u + at · s = ut + ½at² · W = Fd cosθ · P = IV · T = 2π√(l/g) · F = Gm₁m₂/r² · λ = c/f · I = q/t · E = kq₁q₂/r · τ = r×F</div>
+      <div class="quote-line">sin²θ + cos²θ = 1 · ∇·E = ρ/ε₀ · λ = h/p · KE = ½mv² · Δx·Δp ≥ ℏ/2 · sin(ωt) · v = fλ · E_k = 3⁄2 kT · ∇×E = -∂B/∂t · ∇×B = μ₀J + μ₀ε₀∂E/∂t · p = mv · L = Iω · ω = 2πf · Q = mcΔT · R = ρL/A · Φ = BA cosθ · F_c = mv²/r · γ = 1/√(1 - v²/c²)</div>
+      <div class="quote-line">Life is what happens when you're busy making other plans — Lennon · The greatest glory in living lies not in never falling, but in rising every time we fall — Mandela · You must be the change that you wish to see in the world — Gandhi · In three words I can sum up everything I've learned about life: it goes on — Frost · Keep calm and carry on — British Govt</div>
       <div class="quote-line">Whether you think you can or you think you can't, you're right — Ford · The way to get started is to quit talking and begin doing — Disney · The future belongs to those who believe in the beauty of their dreams — Roosevelt · Don't watch the clock; do what it does. Keep going — Levenson · Believe you can and you're halfway there — Roosevelt</div>
       <div class="quote-line">If you can dream it, you can do it — Disney · Act as if what you do makes a difference. It does — James · Success is not final, failure is not fatal: it is the courage to continue that counts — Churchill · Hardships often prepare ordinary people for an extraordinary destiny — Lewis · Go confidently in the direction of your dreams. Live the life you have imagined — Thoreau</div>
       <div class="quote-line">Your time is limited, so don't waste it living someone else's life — Jobs · Don't judge each day by the harvest you reap but by the seeds that you plant — Emerson · To live is the rarest thing in the world. Most people exist, that is all — Wilde · Love the life you live. Live the life you love — Marley · The best way out is always through — Frost</div>
-      <div class="quote-line">Be kind, for everyone you meet is fighting a hard battle — Philo · Happiness is not something ready made. It comes from your own actions — Dalai Lama · The purpose of our lives is to be happy — Dalai Lama · Turn your wounds into wisdom — Winfrey · Life shrinks or expands in proportion to one's courage — Nin</div>
-      <div class="quote-line">The only limit to our realization of tomorrow is our doubts of today — Roosevelt · What we think, we become — Buddha · Do what you can, with what you have, where you are — Roosevelt · It's not whether you get knocked down, it's whether you get up — Lombardi · The best revenge is to be unlike him who performed the injury — Aurelius</div>
-      <div class="quote-line">We must not allow other people's limited perceptions to define us — Satir · The mind is everything. What you think you become — Buddha · It's never too late to be what you might have been — Eliot · If opportunity doesn't knock, build a door — Berle · Everything you’ve ever wanted is on the other side of fear — Addair</div>
-      <div class="quote-line">Challenges are what make life interesting and overcoming them is what makes life meaningful — Marine · Try not to become a man of success, but rather try to become a man of value — Einstein · What lies behind us and what lies before us are tiny matters compared to what lies within us — Emerson · The best way to predict your future is to create it — Lincoln · Don't let yesterday take up too much of today — Rogers</div>
-      <div class="quote-line">It does not matter how slowly you go as long as you do not stop — Confucius · A person who never made a mistake never tried anything new — Einstein · Everything has beauty, but not everyone sees it — Confucius · The only true wisdom is in knowing you know nothing — Socrates · Life is really simple, but we insist on making it complicated — Confucius</div>
-      <div class="quote-line">Dream big and dare to fail — Vaughan · You only live once, but if you do it right, once is enough — West · Keep smiling, because life is a beautiful thing and there's so much to smile about — Monroe · The journey not the arrival matters — Eliot · Don't count the days, make the days count — Ali</div>
+      <div class="quote-line">Be kind, for everyone you meet is fighting a hard battle — Philo · Happiness is not something ready made. It comes from your own actions — Dalai Lama · The purpose of our lives is to be happy — Dalai Lama · Turn your wounds into wisdom — Winfrey · Life shrinks or expands in proportion to one's courage — Nin · </div>
     </div>
   </div>
-  <nav class="navbar navbar-dark">
-    <div class="container-fluid d-flex justify-content-between align-items-center">
-      <a class="navbar-brand" href="#">Quotes Wall</a>
-      <div class="d-flex gap-2">
-        <button id="auth-btn" class="btn btn-outline-light btn-sm"></button>
-        <button id="toggle-theme" class="theme-toggle" title="Toggle Theme">🌓</button>
-      </div>
-    </div>
-  </nav>
+
+  <nav class="navbar navbar-dark"><div class="container-fluid"><a class="navbar-brand" href="#">Quotes Wall</a></div></nav>
+
+  <!-- Timed‑hide header script -->
+  <script>
+    (function(){
+      const nav = document.querySelector('.navbar');
+      let timer;
+      function scheduleHide(){
+        clearTimeout(timer);
+        timer = setTimeout(()=>nav.classList.add('hidden'), 3000); // hide after 3 s
+      }
+      function reveal(){
+        nav.classList.remove('hidden');
+        scheduleHide();
+      }
+      // initial call
+      scheduleHide();
+      // show on any user interaction and restart timer
+      ['mousemove','keydown','touchstart','scroll','click'].forEach(e=>document.addEventListener(e, reveal));
+    })();
+  </script>
 </body>
 </html>
