--- a/index.html
+++ b/index.html
@@ -23,8 +23,22 @@
       color: var(--text-dark);
     }
 
+    /* ===== Subtle paper texture overlay ===== */
+    body::before{
+      content: "";
+      position: fixed;
+      inset: 0;
+      z-index: -2;
+      background: url("https://www.transparenttextures.com/patterns/paper-fibers.png") repeat;
+      opacity: 0.9;                 /* control overall transparency */
+      mix-blend-mode: multiply;     /* blend with underlying colour */
+      pointer-events: none;
+    }
+
+
+
     /* ===== Header ===== */
-    .navbar { background: rgba(139, 0, 0, 0.85) !important; transition: transform .5s ease; }
+    .navbar { background: rgba(120, 20, 20, 0.85) !important; transition: transform .5s ease; }
     .navbar.hidden { transform: translateY(-100%); }
 
     /* ===== Scrolling quotes ===== */
@@ -37,10 +51,29 @@
       flex-direction: column;
       gap: 0.25em; /* spacing */
     }
+
+
+
     #scrolling-text .quote-line { white-space: nowrap; font-size: 30px; margin: 0; }
     /* Only the FIRST quote (top visible) is centered */
     #scrolling-text .quote-line:first-child { width: 100%; text-align: center; }
     @keyframes scroll-left { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
+
+
+    #scrolling-text .quote-line {
+      white-space: nowrap;
+      font-size: 30px;
+      margin: 0;
+      opacity: 0.8;
+      transition: transform 0.25s ease, opacity 0.25s ease, background-color 0.25s ease;
+      pointer-events: auto; /* enable interaction on each line */
+    }
+    #scrolling-text .quote-line:hover {
+      opacity: 1;
+      transform: scale(1.04);
+      background-color: rgba(255, 255, 255, 0.3); /* subtle highlight */
+    }
+
   </style>
 
   <!-- Firebase SDKs -->
