--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
   <meta charset="UTF-8" />
-  <title>Quotes Wall</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
@@ -22,6 +20,21 @@
       background: #73624a url('https://www.transparenttextures.com/patterns/cardboard.png') repeat fixed;
       color: var(--text-dark);
     }
+
+    /* === Payment button custom colour === */
+    #add-quote-btn{                 /* CHANGED add new custom colour */
+      background:#600000;           /* darker than Cornell red */
+      color:#fff;                   /* white text */
+      border:none;
+    }
+    }
+    #add-quote-btn:hover{           /* hover shade */
+      background:#720000;
+      color:#fff;
+    }
+<
+
+
 
     /* ===== Subtle paper texture overlay ===== */
     body::before{
@@ -103,7 +116,15 @@
     </div>
   </div>
 
-  <nav class="navbar navbar-dark"><div class="container-fluid"><a class="navbar-brand" href="#">Quotes Wall</a></div></nav>
+ <!-- Button on the navbar -->
+    <nav class="navbar navbar-dark">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <a class="navbar-brand" href="#">Quotes Wall</a>
+      <a class="btn btn-warning btn-sm" id="add-quote-btn" href="https://buy.stripe.com/5kA5m7dXi5BH6QM144" target="_blank">$1 to add your own quote!</a>
+    </div>
+  </nav>
+
+
 
   <!-- Timed‑hide header script -->
   <script>
