--- a/Success.html
+++ b/Success.html
@@ -4,12 +4,15 @@
   <meta charset="utf-8" />
   <title>Thanks for your support!</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Firebase SDKs (same versions you already use) -->
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
   <style>
-    body{max-width:500px;margin:4rem auto;font-family:'EB Garamond',serif}
+    body {
+      max-width: 500px;
+      margin: 4rem auto;
+      font-family: 'EB Garamond', serif;
+    }
   </style>
 </head>
 <body>
@@ -19,28 +22,46 @@
     <label for="quoteInput" class="form-label">Add your quote below (max 200 chars):</label>
     <textarea id="quoteInput" class="form-control" rows="3" maxlength="200"></textarea>
   </div>
-  <button id="saveBtn" class="btn btn-dark w-100">Save my quote</button>
+  <button id="saveBtn" class="btn btn-dark w-100">Give the world your voice</button>
 
-  <p id="msg" class="mt-3 text-success d-none">✅ Added! Refresh the homepage to see it floating.</p>
+  <p id="msg" class="mt-3 text-success d-none">✅ Added! Refresh the homepage to see it floating.</p>
 
 <script>
-/* ---------- 1.  initialise Firebase (reuse your config) ---------- */
-const firebaseConfig = { /* …same config object… */ };
-firebase.initializeApp(firebaseConfig);
-const db   = firebase.firestore();
-firebase.auth().signInAnonymously();
+  // 1. Firebase config & init
+  const firebaseConfig = {
+    apiKey: "AIzaSyD-yHwfZxWM1mOJOC6OlMYJiv4qSFEQ3rM",
+    authDomain: "quotes-wall-5913f.firebaseapp.com",
+    projectId: "quotes-wall-5913f",
+    storageBucket: "quotes-wall-5913f.firebasestorage.app",
+    messagingSenderId: "981725743103",
+    appId: "1:981725743103:web:012c1f5dfd5fcf81ad89ca",
+    measurementId: "G-C8M26ZD2EW"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.firestore();
 
-/* ---------- 2.  basic save handler ---------- */
-document.getElementById('saveBtn').onclick = async () => {
-  const text = document.getElementById('quoteInput').value.trim();
-  if(!text){ alert('Please type something'); return; }
-  await db.collection('quotes').add({
-    text,
-    createdAt: firebase.firestore.FieldValue.serverTimestamp()
-  });
-  document.getElementById('msg').classList.remove('d-none');
-  document.getElementById('saveBtn').disabled = true;
-};
+  // 2. Auth & Save
+  firebase.auth().signInAnonymously();
+
+  document.getElementById('saveBtn').onclick = async () => {
+    const text = document.getElementById('quoteInput').value.trim();
+    if (!text) {
+      alert('Please type something');
+      return;
+    }
+
+    try {
+      await db.collection('quotes').add({
+        text,
+        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+      });
+      document.getElementById('msg').classList.remove('d-none');
+      document.getElementById('saveBtn').disabled = true;
+    } catch (err) {
+      alert("Oops! Something went wrong.");
+      console.error(err);
+    }
+  };
 </script>
 </body>
 </html>
