this is to debug and temporarily block the new content

--- a/Success.html
+++ b/Success.html
@@ -54,6 +54,7 @@
       await db.collection('quotes').add({
         text,
         createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        approved: false
       });
       document.getElementById('msg').classList.remove('d-none');
       document.getElementById('saveBtn').disabled = true;
