--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       color:#fff;                   /* white text */
       border:none;
     }
-    }
     #add-quote-btn:hover{           /* hover shade */
       background:#720000;
       color:#fff;
@@ -65,8 +64,6 @@
       gap: 0.25em; /* spacing */
     }
 
-
-
     #scrolling-text .quote-line {
       white-space: nowrap;
       font-size: 30px;
@@ -80,6 +77,11 @@
       transform: scale(1.04);
       background-color: rgba(255, 255, 255, 0.3); /* subtle highlight */
     }
+
+    @keyframes scroll-left{
+  -50%   { transform: translateX(100%); }
+  100% { transform: translateX(-100%); }
+}
 
   </style>
 
